--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: #333;
+}
+img {
+  vertical-align: bottom;
+}
 .App {
   text-align: center;
 }
