--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -1,5 +1,5 @@
 .main {
-  margin: 0 3rem;
+  margin: 10rem 3rem;
 }
 .sns-icons-container {
   position: fixed;
@@ -11,4 +11,62 @@
   display: block;
   margin: 2.5rem auto;
   font-size: 1.5rem;
+}
+
+/* 
+
+--- NewItems.js & PopularItems.js --- 
+
+*/
+
+.toppage-items {
+  width: 100%;
+}
+.toppage-items-titles {
+  margin: 7rem 0 3rem;
+  letter-spacing: 2px;
+}
+.toppage-items-titles h3 {
+  font-size: 24px;
+}
+.toppage-items-titles p {
+  font-size: 14px;
+  font-weight: 900;
+  color: rgb(169, 182, 164);
+}
+.toppage-item-cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.toppage-item {
+  width: 200px;
+  margin: 0 1rem;
+}
+.toppage-item-img-container {
+  margin-top: 1rem;
+  cursor: pointer;
+}
+.toppage-item-img {
+  width: 100%;
+}
+.toppage-item-details {
+  text-align: left;
+  font-size: 13px;
+}
+.item {
+  margin: 1rem 0 0.3rem;
+}
+.plice {
+  font-size: 12px;
+}
+
+.company-name {
+  font-size: 3rem;
+  font-weight: 900;
+  letter-spacing: 3px;
+  color: rgb(83, 97, 77);
+
+  margin: 7rem;
 }
