--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,49 @@
 img {
   vertical-align: bottom;
 }
+a {
+  text-decoration: none;
+}
+li {
+  list-style: none;
+}
 .App {
   text-align: center;
+  width: 100vw;
+}
+
+/* 
+
+  Footer.js
+
+*/
+.footer {
+  font-size: 13px;
+  letter-spacing: 1px;
+  /* margin: 0 5rem; */
+}
+.f-menu-container {
+  margin: 1rem 0;
+  display: flex;
+  justify-content: center;
+}
+.f-menu-container h3 {
+  width: 120px;
+  margin-right: 1rem;
+  text-align: right;
+}
+.f-menu-container ul {
+  display: flex;
+  flex-wrap: wrap;
+  width: 60%;
+  line-height: 1.5rem;
+}
+.f-menu-container ul li {
+  margin: 0 0.5rem;
+}
+
+.footer-sns-icon {
+  display: flex;
+  justify-content: center;
+  margin: 1rem;
 }
