--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,5 +1,5 @@
 .header {
-  margin: 7rem;
+  margin: 7rem 5rem;
 }
 .header h1 {
   font-size: 3rem;
@@ -8,9 +8,20 @@
 .ShoppingBtns {
   display: flex;
   justify-content: right;
+  align-items: center;
 }
-.ShoppingBtns p {
+.ShoppingBtns div {
   margin: 0.5rem;
+  align-items: center;
+  cursor: pointer;
+}
+.login-btn {
+  display: flex;
+  align-items: center;
+}
+.login-icon {
+  font-size: 25px;
+  margin-right: 0.5rem;
 }
 
 .navMenu {
