--- a/src/components/main/PickupItem.css
+++ b/src/components/main/PickupItem.css
@@ -1,4 +1,10 @@
+.puis {
+  display: flex;
+  width: 100%;
+  overflow: scroll;
+}
 .pickup-item {
+  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
