--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,7 +1,4 @@
 .header {
-<<<<<<< Updated upstream
-  margin: 7rem 5rem;
-=======
   /* margin: 7rem 5rem; */
 }
 .header-top {
@@ -9,14 +6,14 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem 3rem;
-  /* background-color: #fff; */
-  background-color: #777;
+  background-color: #fff;
+  /* background-color: #777; */
+  box-shadow: 0px 2px 13px rgba(0, 0, 0, 0.5);
   z-index: 3;
-  color: #fff;
->>>>>>> Stashed changes
+  color: #333;
 }
 .header h1 {
-  font-size: 3rem;
+  font-size: 2rem;
 }
 .header-contact {
   margin-left: auto;
@@ -47,24 +44,20 @@
 .navMenu {
   display: flex;
   justify-content: center;
-<<<<<<< Updated upstream
-=======
   /* background-color: rgb(218, 218, 218); */
   background-color: rgba(212, 134, 147, 0.637);
->>>>>>> Stashed changes
 }
 .menu {
   list-style: none;
   margin: 0.5rem;
-  font-size: 10px;
+  font-size: 13px;
+  letter-spacing: 1px;
 }
 .navMenu a {
   text-decoration: none;
   width: auto;
   height: auto;
 }
-<<<<<<< Updated upstream
-=======
 
 /* 
   humberger 
@@ -221,4 +214,3 @@ label .lines {
     stroke-dashoffset: 5000;
   }
 } */
->>>>>>> Stashed changes
