--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -64,6 +64,12 @@
 /* 
   humberger 
 */
+.hamburger {
+  position: fixed;
+  right: 1.7rem;
+  top: 1.5rem;
+}
+
 #humberger {
   opacity: 0;
   position: fixed;
@@ -95,7 +101,7 @@ label .lines {
   transition: all 0.5s;
 }
 
-#menu {
+.menu-in-hum {
   display: block;
   background-color: rgb(255, 255, 255);
   position: fixed;
@@ -105,19 +111,19 @@ label .lines {
   width: 15%;
   height: 100%;
 }
-#menu a {
+.menu-in-hum a {
   color: #333;
   display: block;
   text-align: center;
   padding: 1rem;
 }
-#menu li:hover > ul {
+.menu-in-hum li:hover > ul {
   opacity: 0;
 }
 .lines:hover {
   cursor: pointer;
 }
-#humberger:checked ~ #menu {
+#humberger:checked ~ .menu-in-hum {
   right: 0;
 }
 #humberger:checked + label .lines .line1 {
