--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -25,14 +25,12 @@
   justify-content: right;
   align-items: center;
 }
-.ShoppingBtns div {
-  margin: 0.3rem;
-  align-items: center;
-  cursor: pointer;
-}
+
 .login-btn {
+  margin: 0.5rem;
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
 .login-icon,
 .cart-icon,
@@ -68,4 +66,53 @@
   position: fixed;
   right: 1.7rem;
   top: 1.5rem;
+  z-index: 3;
+  cursor: pointer;
+}
+.ham-class-dark {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(51, 51, 51, 0.7);
+  margin: 0;
+  cursor: default;
+}
+.ham-class {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 50%;
+  padding: 0 3rem;
+  overflow: scroll;
+  background-color: #fff;
+  display: flex;
+  flex-wrap: wrap;
+  transition: 1s;
+}
+.ham-class-li {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0;
+  margin: 0 2rem;
+  color: #333;
+}
+.ham-class-li a {
+  color: #333;
+  padding-top: 0.5rem;
+}
+.ham-img {
+  display: none;
+}
+.ham-class-img {
+  display: inline-block;
+  margin: 0 auto;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  cursor: pointer;
 }
