--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -82,10 +82,10 @@
 .ham-class {
   position: fixed;
   top: 0;
-  left: 0;
+  right: 0;
   display: block;
-  width: 100%;
-  height: 50%;
+  width: 50%;
+  height: 100%;
   padding: 0 3rem;
   overflow: scroll;
   background-color: #fff;
@@ -101,6 +101,7 @@
   margin: 0 2rem;
   color: #333;
 }
+
 .ham-class-li a {
   color: #333;
   padding-top: 0.5rem;
