fixed error in product page

--- a/src/components/product-pages/Product.css
+++ b/src/components/product-pages/Product.css
@@ -1,7 +1,7 @@
 .product-detail {
   display: flex;
   justify-content: center;
-  margin-top: 3rem;
+  margin: 3rem 0;
 }
 .product-detail-options {
   width: 300px;
