--- a/src/components/main/PickupItem.css
+++ b/src/components/main/PickupItem.css
@@ -1,7 +1,8 @@
-.puis {
+.pickupItems {
   display: flex;
   width: 100%;
   overflow: scroll;
+  margin-top: 10rem;
 }
 .pickup-item {
   width: 100vw;
